# pairtools

./: .flake8  .gitignore  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  _dedup.pyx  classify_reads.py  classify_sam.py  dedup.py  dedup_pairsam.sh  dedup_split_pairsam.sh  dedup_split_sorted_pairsam.sh  distiller.sh  duplicateRemover.pyx  get_pairsam_header.sh  hisplitter.py  make_pairsam.py  merge_sorted_pairsam.py  pairsam_dedup.py  pairsam_divertunmapped.sh  pairsam_markasdup.py  pairsam_sort.sh  pairsam_split.py  pairsam_splitter.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  requirements_doc.txt  setup.py  sort_pairsam.sh  split_pairs.py  split_pairsam.py  split_sams_append_pairs.py  split_unmapped.sh  tag_duplicates.py
doc/: Makefile  cli_tools.rst  conf.py  designnotes.rst  formats.rst  index.rst  installation.rst  pairsam.rst  parse.rst  parsing.rst  protocols_pipelines.rst  quickstart.rst  sorting.rst  stats.rst  technotes.rst
examples/: distiller_pipeline.sh  example_pipeline.sh  example_singlecell_pipeline.sh  pairtools_phase_walkthrough.ipynb  pairtools_restrict_walkthrough.ipynb  pairtools_walkthrough.ipynb  parse2_demo.ipynb  scalings_example.ipynb
pairsamtools/: __init__.py  _common.py  _dedup.pyx  _fileio.py  _headerops.py  _io.py  _pairsam_format.py  pairs_dedup.py  pairsam_dedup.py  pairsam_filterbycov.py  pairsam_markasdup.py  pairsam_merge.py  pairsam_multifilter.py  pairsam_parse.py  pairsam_phase.py  pairsam_restrict.py  pairsam_select.py  pairsam_skip_header.sh  pairsam_sort.py  pairsam_sort.sh  pairsam_split.py  pairsam_stats.py  sam_to_pairsam.py
pairtools/: __init__.py  __main__.py  _dedup.pyx  _fileio.py  _headerops.py  _io.py  _logging.py  _pairsam_format.py  _parse.py  _parse2.py  _parse_pysam.pyx  dedup.py  extractsam.py  markasdup.py  merge.py  pairtools_dedup.py  pairtools_filterbycov.py  pairtools_flip.py  pairtools_header.py  pairtools_markasdup.py  pairtools_merge.py  pairtools_parse.py  pairtools_parse2.py  pairtools_phase.py  pairtools_restrict.py  pairtools_sample.py  pairtools_select.py  pairtools_sort.py  pairtools_split.py  pairtools_stats.py  pairtools_subsample.py  pairtools_trackpath.py  parse.py  restrict.py  select.py  sort.py  split.py  stats.py
tests/: test_classify_utils.py  test_dedup.py  test_extractsam.py  test_filterbycov.py  test_flip.py  test_header.py  test_headerops.py  test_markasdup.py  test_merge.py  test_parse.py  test_parse2.py  test_restrict.py  test_sam_to_pairsam.py  test_scaling.py  test_select.py  test_sort.py  test_split.py  test_stats.py
utils/: _dedup.pyx  _distiller_common.py  merge_sorted_pairsam.py  pairs_dedup.py  pairsam_divertunmapped.sh  pairsam_get_header.sh  pairsam_markasdup.py  pairsam_merge.py  pairsam_select.py  pairsam_select_pair_type.py  pairsam_select_pair_type.sh  pairsam_separate_pair_type.py  pairsam_separate_pair_type.sh  pairsam_skip_header.sh  pairsam_sort.py  pairsam_sort.sh  pairsam_split.py  sam_to_pairsam.py
(+73 files in other folders)
