[build-system]
requires = [
    "setuptools", 
    "cython", 
    "numpy", 
    "pysam"]
build-backend = "setuptools.build_meta"

[project]
name = "pairtools"
dynamic = ['version', 'authors',  'license', 'urls', 'description', 'keywords', 'classifiers', 'readme', 'scripts', 'dependencies']
requires-python = ">=3.9"

[tool.cibuildwheel.linux]
before-all = "yum install bzip2-devel xz-devel -y;"
#before-build = "python -m pip install pysam --no-binary pysam"

[tool.cibuildwheel.linux.environment]
PIP_NO_BINARY = "pysam"