[project]
name = "pairtools"
dynamic = ['version',]

dependencies = [
    'cython',
    'numpy>=1.10',
    'click>=6.6',
    'scipy>=1.7.0',
    'pandas>=1.3.4',
    'pysam>=0.15.0',
    'pyyaml',
    'bioframe>=0.3.3',
]
requires-python = ">=3.9"

description = "CLI tools to process mapped Hi-C data"
authors = [
  {name = "Open2C", email = "open.chromosome.collective@gmail.com"},
]
license = {text = "MIT License"}
keywords = ["genomics", "bioinformatics", "Hi-C", "contact", "chromosome"]
readme = "README.md"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-flake8',
  'pytest-cov',
]

doc = [
  'sphinx-click',
  'ipython',
  'nbsphinx',
  'Sphinx>=7.0',
  'sphinx_rtd_theme',
  'docutils>0.16',
]



[project.urls]
Homepage = "https://github.com/open2c/pairtools"
Documentation = "https://pairtools.readthedocs.io/en/latest/"
Repository = "https://github.com/open2c/pairtools.git"
Issues = "https://github.com/open2c/pairtools/issues"
Changelog = "https://github.com/open2c/pairtools/blob/master/CHANGES.md"


[project.scripts]
pairtools = "pairtools.cli:cli"


[build-system]
requires = [
    "setuptools", 
    "cython", 
    "numpy", 
    "pysam"]
build-backend = "setuptools.build_meta"
